1) Game chart shows the evolution of the game, 2) Game chart now has axis laberls, 3)TODO list added

--- a/views/my_profile_page.ejs
+++ b/views/my_profile_page.ejs
@@ -654,4 +654,8 @@
       $('#parentDiv table tr:nth-child(' + childNum + ')').css("background-color", "inherit");
     }
   );
+  
+  //TODO sorting the table of games 
+  //TODO sorting the table of opponents 
+
 </script>
