--- a/public/css/argon.css
+++ b/public/css/argon.css
@@ -54,12 +54,12 @@
     --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
 }
 
-*,
+/* *:not(i),
 *:not(i)::before,
 *:not(i)::after
 {
     box-sizing: border-box;
-}
+} */
 
 
 html
