--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,15 +15,89 @@
         <div class="col-lg-7 col-md-10 col-sm-10">
           <h1 class="display-2 text-white home-title">Store your memories here!</h1>
           <p class="home-subtitle">This is a page where you can store your scrabble scores</p>
-          <a href="/error-page"
-             class="btn btn-neutral rounded-pill home-btn-start-game">Start a new game!</a>
+          <p class="home-subtitle">Click below to see examples of users profiles</p>
+          <!-- <a href="/error-page"
+             class="btn btn-neutral rounded-pill home-btn-start-game">Start a new game!</a> -->
+             <a href="/euxp1q23yqfg167s4316g4sq"
+             class="btn btn-neutral rounded-pill home-btn-start-game">Go to Konstantina's profile</a>
+          <a href="/5fae6b01eeab478c1207e2bf"
+             class="btn btn-neutral rounded-pill home-btn-start-game">Go to Christos' profile</a>
         </div>
       </div>
     </div>
   </div>
   <!-- Page content -->
-  <!-- <div class="container-fluid mt--6">
-    <div class="row">
+  <!-- <div class="container-fluid " style="background-color: #c9c9c9;">
+    <div class="row justify-content-center">
+      <div class="col-lg-7 col-md-7">
+        <div class="card bg-secondary border-0 mb-0 mt--8">
+          <div class="card-header bg-transparent pb-5">
+            <div class="text-muted text-center mt-2 mb-3"><small>Sign in with</small></div>
+            <div class="btn-wrapper text-center">
+              <a href="#"
+                 class="btn btn-neutral btn-icon">
+                <span class="btn-inner--icon"><img src="/assets/facebook.png"></span>
+                <span class="btn-inner--text">Facebook</span>
+              </a>
+              <a href="#"
+                 class="btn btn-neutral btn-icon">
+                <span class="btn-inner--icon"><img src="/assets/google.svg"></span>
+                <span class="btn-inner--text">Google</span>
+              </a>
+            </div>
+          </div>
+          <div class="card-body px-lg-5 py-lg-5">
+            <div class="text-center text-muted mb-4">
+              <small>Or sign in with credentials</small>
+            </div>
+            <form role="form">
+              <div class="form-group mb-3">
+                <div class="input-group input-group-merge input-group-alternative">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><div class="far fa-envelope"></div></span>
+                  </div>
+                  <input class="form-control"
+                         placeholder="Email"
+                         type="email">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="input-group input-group-merge input-group-alternative">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                  </div>
+                  <input class="form-control"
+                         placeholder="Password"
+                         type="password">
+                </div>
+              </div>
+              <div class="custom-control custom-control-alternative custom-checkbox">
+                <input class="custom-control-input"
+                       id=" customCheckLogin"
+                       type="checkbox">
+                <label class="custom-control-label"
+                       for=" customCheckLogin">
+                  <span class="text-muted">Remember me</span>
+                </label>
+              </div>
+              <div class="text-center">
+                <button type="button"
+                        class="btn btn-primary my-4">Sign in</button>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="row mt-3">
+          <div class="col-6">
+            <a href="#"
+               class="text-light"><small>Forgot password?</small></a>
+          </div>
+          <div class="col-6 text-right">
+            <a href="#"
+               class="text-light"><small>Create new account</small></a>
+          </div>
+        </div>
+      </div>
       <!-- <div class="col-xl-4 order-xl-2">
         <div class="card card-profile">
           <img src="../assets/img-1-1000x600.jpg"
@@ -214,11 +288,11 @@
             </form>
           </div>
         </div>
-      </div> -->
-  <!--  </div> -->
+      </div>  -->
+    </div>
     <!-- Footer -->
     <%- include('partials/footer'); -%>
-  </div>
+  </div> 
 </div>
 
 <%- include('partials/end_file'); -%>
