--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,7 +29,7 @@
       <link rel="stylesheet"
             href="/css/styles.css" />
       <!-- Icons -->
-      <script src="https://use.fontawesome.com/3ae882e35b.js"></script>
+      <script src="https://kit.fontawesome.com/b4c69266b5.js" crossorigin="anonymous"></script>
       <!-- Favicon -->
       <link rel="icon" href="/assets/Letter.ico">
 </head>
