Minor bug in redirection towards game page corrected

--- a/views/my_profile_page.ejs
+++ b/views/my_profile_page.ejs
@@ -608,7 +608,7 @@
               </form> \
             </td> \
             <td > \
-              <form action="/game'+ posStats.games[i]._id +'" \
+              <form action="/game/'+ posStats.games[i]._id +'" \
                     method="post"> \
                 <button type="submit" \
                         name="game_id" \
